Added in the locations field and added TOURtech round two.

--- a/themes/hugo-orbit-theme/layouts/partials/sidebar.html
+++ b/themes/hugo-orbit-theme/layouts/partials/sidebar.html
@@ -22,4 +22,8 @@
 		{{ partial "interests.html" . }}
 		{{ end }}
 
+		{{ if .Site.Params.rskill.enable }}
+		{{ partial "skill_right.html" . }}
+		{{ end }}
+
         </div><!--//sidebar-wrapper-->
